# tiny-binaries

./: Dockerfile  README.md
src/asm-elf-0/: hi.s  yo.s
src/asm-elf-1/: Dockerfile  Makefile  README.md  hi.s  yo.s
src/asm-naive/: hi.s
src/asm-opt/: Makefile  README.md  hi.s
src/c-asm/: Makefile  hi.c
src/c-libc/: Makefile  hi.c
src/go/: hi.go
src/rust/default/: Cargo.toml
src/rust/opt-abort/.cargo/: config.toml
src/rust/opt-abort/src/: main.rs
src/rust/opt-all/: Cargo.toml
src/rust/opt-immediate-abort/: Cargo.toml
src/rust/opt-lto/: Cargo.toml
src/rust/opt-nostd/: Cargo.toml
src/rust/opt-nostd/src/: main.rs
src/rust/opt-strip/: Cargo.toml
