[package]
name = "hi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
panic = "abort" # abort on panic
# strip = true  # strip symbols (requires nightly)
opt-level = "z" # optimize for size
lto = true # enable LTO
